setup/eks_cluster/k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      component: frontend 
  template:
    metadata:
      labels:
        component: frontend 
    spec:
      containers:
        - name: frontend
          image: lusengeri/django-test-app-frontend:1.0.0
          ports:
            - containerPort: 3000
