setup/eks_cluster/k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: ClusterIP
  selector:
    component: backend
  ports:
    - port: 8000
      targetPort: 8000
