setup/eks_cluster/k8s/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  type: ClusterIP
  selector:
    component: db
  ports:
    - port: 5432
    - targetPort: 5432
